<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/toplayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@drawable/diagonalview"
                >
                <com.p1024.convenientdetailer.CustomViews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_forgot_password"
                    android:layout_weight="2"
                    android:gravity="center"
                    app:customFont="@string/font_avenir_aeh"
                    android:textSize="@dimen/TEXT_SIZE_20"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/toplayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/SIZE_10"
                android:layout_marginRight="@dimen/SIZE_10">
                <LinearLayout
                    android:id="@+id/middlelayout"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <com.p1024.convenientdetailer.CustomViews.CustomTextView
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:customFont="@string/font_avenir_aeh"
                        android:text="@string/str_forgotpassword_message"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:hintEnabled="true"
                        app:hintTextAppearance="@style/MyAppearance">

                        <com.p1024.convenientdetailer.CustomViews.CustomEditText
                            android:id="@+id/edtuseremail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:customFont="@string/font_avenir_light"
                            android:singleLine="true"
                            android:inputType="textEmailAddress"
                            android:backgroundTint="@color/text_input_hint_color"
                            android:hint="@string/forgot_password_hint" />

                    </android.support.design.widget.TextInputLayout>
                    <com.p1024.convenientdetailer.CustomViews.CustomTextView
                        android:id="@+id/txtforgotpassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/buttondrawable"
                        android:padding="5dp"
                        android:text="@string/str_send"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:gravity="center"
                        app:customFont="@string/font_avenir_aeh"

                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
