<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/size_10"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:id="@+id/toplayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="@drawable/diagonalview"
            >

            <com.p1024.convenientdetailer.CustomViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_login"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="@dimen/TEXT_SIZE_30"
                android:textColor="@color/white"
                app:customFont="@string/font_avenir_aeh"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:id="@+id/fblogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_facebook_"/>
                <ImageView
                    android:id="@+id/googleplus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_google_plus"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/toplayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="@dimen/SIZE_10">
            <LinearLayout
                android:id="@+id/middlelayout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/MyAppearance">

                    <com.p1024.convenientdetailer.CustomViews.CustomEditText
                        android:id="@+id/edt_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:backgroundTint="#A9A9AB"
                        app:customFont="@string/font_avenir_medium"
                        android:hint="@string/str_emailusername"
                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/MyAppearance">

                    <com.p1024.convenientdetailer.CustomViews.CustomEditText
                        android:id="@+id/edt_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_password"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        app:customFont="@string/font_avenir_medium"
                        android:backgroundTint="#A9A9AB"/>

                </android.support.design.widget.TextInputLayout>
                <com.p1024.convenientdetailer.CustomViews.CustomTextView
                    android:id="@+id/txtlogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/buttondrawable"
                    android:padding="@dimen/SIZE_5"
                    android:text="@string/str_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/TEXT_SIZE_20"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/SIZE20"
                    app:customFont="@string/font_avenir_aeh"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_below="@id/middlelayout">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="10dp">
                    <com.p1024.convenientdetailer.CustomViews.CustomTextView
                        android:id="@+id/txtforgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_margin="@dimen/SIZE20"
                        android:layout_height="wrap_content"
                        android:text="Forgot Password?"
                        android:textColor="#018300"
                        android:textSize="18sp"
                        app:customFont="@string/font_avenir_medium"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_margin="@dimen/SIZE20">
                    <com.p1024.convenientdetailer.CustomViews.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="Don't have an account?"/>
                    <com.p1024.convenientdetailer.CustomViews.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_signup"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:gravity="right"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    </ScrollView>


</RelativeLayout>
